# docs/swagger.json
@@ -9,57 +9,6 @@
     "host": "127.0.0.1:8080",
     "basePath": "/",
     "paths": {
-        "//history": {
-            "post": {
-                "description": "Check history",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "history"
-                ],
-                "summary": "Hishtory",
-                "parameters": [
-                    {
-                        "description": "ttl hadler",
-                        "name": "input",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/handler.history"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.HttpResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.HttpError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/response.HttpError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/response.HttpError"
-                        }
-                    }
-                }
-            }
-        },
         "/adding_user_to_segment": {
             "post": {
                 "description": "Addition segments for user in database",
@@ -366,6 +315,57 @@
                 }
             }
         },
+        "/history": {
+            "post": {
+                "description": "Check history",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "history"
+                ],
+                "summary": "Hishtory",
+                "parameters": [
+                    {
+                        "description": "ttl hadler",
+                        "name": "input",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/handler.history"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.HttpResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.HttpError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.HttpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.HttpError"
+                        }
+                    }
+                }
+            }
+        },
         "/ttl_adding_user_to_segment": {
             "post": {
                 "description": "Ttl adding or remove",
@@ -454,7 +454,7 @@
                     }
                 },
                 "id": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
